--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "stampino": "^0.7.0"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "wtr test/**/*_test.js --node-resolve --playwright --browsers chromium",
+    "build": "wireit",
+    "test": "wireit",
     "format": "prettier \"src/**/*.ts\" --write",
-    "demo": "wds --node-resolve"
+    "demo": "wireit"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
@@ -22,7 +22,8 @@
     "@web/test-runner-mocha": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "wireit": "^0.14.4"
   },
   "author": "Justin Fagnani <justin@fagnani.com>",
   "license": "MIT",
@@ -30,5 +31,43 @@
   "bugs": {
     "url": "https://github.com/justinfagnani/stampino-element/issues"
   },
-  "homepage": "https://github.com/justinfagnani/stampino-element#readme"
+  "homepage": "https://github.com/justinfagnani/stampino-element#readme",
+  "wireit": {
+    "build": {
+      "command": "tsc --pretty",
+      "files": [
+        "src/**/*.ts",
+        "tsconfig.json"
+      ],
+      "output": [
+        "stampino-element.{d.ts,d.ts.map,js,js.map}",
+        "stampino-base-element.{d.ts,d.ts.map,js,js.map}",
+        "test"
+      ],
+      "clean": "if-file-deleted"
+    },
+    "demo": {
+      "command": "wds",
+      "service": true,
+      "dependencies": [
+        {
+          "script": "build",
+          "cascade": false
+        }
+      ],
+      "files": [
+        "web-dev-server.config.js"
+      ]
+    },
+    "test": {
+      "command": "wtr test/**/*_test.js --node-resolve --playwright --browsers chromium",
+      "dependencies": [
+        "build"
+      ],
+      "files": [
+        "web-test-runner.config.js"
+      ],
+      "output": []
+    }
+  }
 }
